<resources>
    <string name="app_name">SmartFrostApp</string>
    <string name="products_title">Продукты</string>
    <string name="status_online">Онлайн</string>
    <string name="search_placeholder">Поиск продуктов&#8230;</string>
    <string name="sort_name">По имени</string>
    <string name="sort_expiry">По сроку</string>
    <string name="sort_expired">По просроченности</string>
    <string name="filter_all">Все</string>
    <string name="category_fruits">Фрукты</string>
    <string name="category_drinks">Напитки</string>
    <string name="category_ready">Готовое</string>
    <string name="category_other">Прочее</string>
    <string name="expired">Истёк</string>
    <string name="expiry_in">Через %1$s</string>
    <string name="category_dairy">Молочное</string>
    <string name="category_meat">Мясо</string>
    <string name="category_veggies">Овощи</string>
    <string name="fridge">Холодильник</string>
    <string name="freezer">Морозильник</string>
    <string name="days_left">%1$d дн.</string>
    <string name="today">Сегодня</string>
    <string name="nav_overview">Обзор</string>
    <string name="nav_stocks">Запасы</string>
    <string name="nav_scanner">Сканер</string>
    <string name="nav_recipes">Рецепты</string>
    <string name="nav_settings">Настройки</string>
    <string name="add_product">Добавить продукт</string>
    <string name="edit_product">Редактировать продукт</string>
    <string name="product_name">Название</string>
    <string name="product_quantity">Количество (напр. 1 кг)</string>
    <string name="product_expiry">Срок годности (дней)</string>
    <string name="manufacture_date">Дата изг.</string>
    <string name="expiry_date">Дата просрочки</string>
    <string name="product_unit">Единица измерения</string>
    <string name="unit_pcs">шт</string>
    <string name="unit_kg">кг</string>
    <string name="unit_l">л</string>
    <string name="product_category">Категория</string>
    <string name="add_category">Добавить категорию</string>
    <string name="manage_categories">Управление категориями</string>
    <string name="delete_category">Удалить категорию</string>
    <string name="edit_category">Переименовать категорию</string>
    <string name="category_exists">Категория уже существует</string>
    <string name="category_cant_be_empty">Название не может быть пустым</string>
    <string name="new_category_name">Название категории</string>
    <string name="save">Сохранить</string>
    <string name="cancel">Отмена</string>
    <string name="login_title">Вход в SmartFrost</string>
    <string name="email_label">Электронная почта</string>
    <string name="password_label">Пароль</string>
    <string name="login_button">Войти</string>
    <string name="register_link">Нет аккаунта? Зарегистрироваться</string>
    <string name="error_invalid_email">Введите корректный email</string>
    <string name="error_short_password">Пароль слишком короткий</string>
    <string name="recipes_title">Рецепты для вас</string>
    <string name="recipe_ingredients">%1$d ингредиентов</string>
    <string name="recipe_ready">Можно приготовить!</string>
    <string name="settings_profile">Профиль</string>
    <string name="settings_notifications">Уведомления</string>
    <string name="settings_appearance">Внешний вид</string>
    <string name="settings_help">Помощь и поддержка</string>
    <string name="settings_logout">Выйти из аккаунта</string>
    <string name="user_name">Геннадий</string>
    <string name="user_email">gena@example.com</string>
    <string name="tab_my_products">МОИ ПРОДУКТЫ</string>
    <string name="tab_shopping_list">СПИСОК ПОКУПОК</string>
    <string name="empty_list">Список пуст</string>
    <string name="nav_product">Продукт</string>
    <string name="nav_add_barcode">Добавить</string>
    <string name="nav_remove_barcode">Удалить</string>
    <string name="nav_search">Поиск</string>
    <string name="scan_mode_product">Продукт</string>
    <string name="scan_mode_receipt">Чек</string>
    <string name="scan_canceled">Сканирование отменено</string>
    <string name="scan_success">Данные чека отправлены</string>
    <string name="expiry_info">Сроки годности</string>
    <string name="select_amount">Выберите количество</string>
    <string name="unit_gram">г</string>
    <string name="unit_kilo">кг</string>
    <string name="unit_liter">л</string>
    <string name="unit_ml">мл</string>
    <string name="select_category">Выберите категорию</string>
    <string name="search_category">Поиск категории</string>
</resources>